style.css
body {
  font-family: Arial, sans-serif;
  font-weight: bold;
  background-image: url("jjk-shibuya.png");
  background-size: cover;
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}
h1 {
  font-size: 3.5rem;
  color: hsl(0, 0%, 100%);
}
.choices {
  width: 100%;
  max-width: 900px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 30px;
}

.choices button {
  font-size: 7.5rem;
  width: 160px;
  height: 160px;
  margin: 0 10px;
  padding: 0;
  border-radius: 50%;
  background-color: hsl(22, 100%, 50%);
  cursor: pointer;
  transition: background-color 0.5s ease;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.choices button:hover {
  background-color: hsl(200, 100%, 70%);
}
#playerDisplay,
#computerDisplay {
  font-size: 2.5rem;
  color: whitesmoke;
}
#resultDisplay {
  text-align: center;
  font-size: 5rem;
  margin: 30px 0;
  white-space: pre-line;
}
#mahoraga {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 50%;
}
.scoreDisplay {
  font-size: 2rem;
  color: whitesmoke;
}
.greenText,
#playerScoreDisplay {
  color: hsl(130, 84%, 54%);
}
.redText,
#computerScoreDisplay {
  color: hsl(0, 84%, 60%);
}

